Correciones Servlets y cambios en el service producto